fix: changed padding spacing to give more space for side-nav

--- a/src/styles/6-modules/_m-main.scss
+++ b/src/styles/6-modules/_m-main.scss
@@ -8,7 +8,7 @@
         margin: 0;
         @include wt(two-third);
         flex-grow: 1;
-        padding-right: sz(xxl);
+        padding-right: sz(xxx);
         padding-top: sz(xl);
     }
 }
