--- a/src/styles/6-modules/_m-side-nav.scss
+++ b/src/styles/6-modules/_m-side-nav.scss
@@ -5,10 +5,7 @@
         display: inline-block;
         position: fixed;
         transform: rotate(90deg);
-        right: -9.5em;
-        // right: 50px;
-        // top: 150px;
-        // top: 160px;
+        right: -8.5em;
         top: 175px;
     }
 }
