--- a/src/styles/7-super/_s-xl-sidebar.scss
+++ b/src/styles/7-super/_s-xl-sidebar.scss
@@ -5,7 +5,7 @@
         //gutters
         @include wt(third);
         max-width: 425px;
-        padding: 0 sz(xl);
+        padding: 0 sz(xxl);
         height: 100vh;
         overflow: scroll; 
     }
